<resources>
    <string name="app_name">Andela Resource Tracker</string>
    <string name="andela_logo_description">Andela Logo</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="andela">Andela</string>
    <string name="resource">Resource</string>
    <string name="tracker">Tracker</string>
    <string name="menu_send_report">Report Lost Asset</string>
    <string name="menu_logout">Log Out</string>
    <string name="display_name">Andela Resource Tracker</string>
    <string name="email_address">andela.art@andela.com</string>
    <string name="title_activity_serial_entry">SerialEntry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_title">Resource Tracker</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="full_name">Full name</string>
    <string name="email">example@gmail.com</string>
    <string name="check_serial">Check Serial</string>
    <string name="check_nfc">Scan NFC Tag</string>
    <string name="enter_text">Enter Serial</string>
    <string name="serial_hint">Serial Number</string>
    <string name="serial_settings">settings</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="okay">Okay</string>
    <string name="logout_yes">YES</string>
    <string name="logout_cancel">CANCEL</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="cohort_title">cohort</string>
    <string name="header_image">header image</string>
    <string name="check_out">CHECK-OUT</string>
    <string name="email_title">E-mail</string>
    <string name="cohort">Cohort</string>
    <string name="checkin">CHECK-IN</string>
    <string name="mac">mac</string>
    <string name="serial">Serial: </string>
    <string name="Asset">ASSET </string>
    <string name="AssetTypeMacbookPro">Macbook Pro </string>
    <string name="unassigned">NO ASSET ASSIGNED YET </string>
    <string name="report_problem_description">SOMETHING IS\'NT WORKING?</string>
    <string name="send_feedback_hint">What would you like us to improve?</string>
    <string name="asset_scanned_textview">NFC Security Tag Scanned</string>
    <string name="asset_scanned_press">Press submit to check asset owner</string>
    <string name="asset_code_textview">Asset Code</string>
    <string name="asset_serial_textview">Serial</string>
    <string name="send_feedback_description">
        Kindly leave us feeback regarding our app and it’s features.
    </string>
    <string name="report_damage_loss">Report Damage/Loss</string>
    <string name="insurance_caption">This information is required for insurance purposes</string>
    <string name="type">Select the type of the incident</string>
    <string name="location">Location of the incident</string>
    <string name="description">Description of the incident</string>
    <string name="injuries_report">Were there any injuries sustained during this incident? If Yes, please describe the injuries sustained.</string>
    <string name="police_abstract">Have you obtained a police abstract?</string>
    <string name="witnesses">Were there any witness? If Yes, please list them down with their contact information.</string>
    <string name="property_list">Was there any loss of property involved during this incident? If Yes, Please list and describe theproperty lost</string>
    <string name="please_wait">Please wait…</string>

    <string-array name="incident_options">
        <item>Damage</item>
        <item>Loss</item>
    </string-array>
</resources>
