...
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/display_name"
        android:layout_width="183dp"
        android:layout_height="30dp"
        android:layout_above="@+id/addSerial"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="22dp"
        android:background="#1e1d23"
        android:fontFamily="@font/avenir_heavy"
        android:textAlignment="center"
...
