...
            android:textColor="@color/dialog_text_view"
            android:text="@string/enter_text"
            android:background="@android:color/white"
            />

        <EditText
            android:id="@+id/serial_edit_text"
            android:layout_width="@dimen/dialog_edit_text_width"
            android:layout_height="@dimen/dialog_edit_text_height"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:backgroundTint="@color/dialog_tint"
            />
        <Button
...
